cambios en la estructura de carpetas

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gaymers | Registro</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../static/css/styles.css">
 </head>
 <body>
     <div class="wrapper">
@@ -35,7 +35,7 @@
             <button type="submit">Registrarse</button>
             <div class="login">
                 <span class="text">¿Ya tienes una cuenta?</span>
-                <a href="../login/login.html">Inicia sesión</a>
+                <a href="./login.html">Inicia sesión</a>
             </div>
         </form>
     </div>
