--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gaymers | Login</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../static/css/styles.css">
 </head>
 <body>
     <div class="wrapper">
@@ -21,15 +21,13 @@
                     <input type="checkbox" id="remember">
                     <span class="text">Recuerdame</span>
                 </label>
-                <a href="#">Olvidaste tu contraseña?</a>
             </div>
             <button type="submit">Log In</button>
-            <div class="register">
+            <div class="login">
                 <span class="text">No tienes una cuenta?</span>
-                <a href="../signup/signup.html">Registrate</a>
+                <a href="./signup.html">Registrate</a>
             </div>
         </form>
-
     </div>
 </body>
 </html>
