--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -25,7 +25,7 @@ body::before {
     z-index: -1;
 }
 
-/* Navbar styles */
+/* Navbar */
 .navbar {
     position: fixed;
     top: 0;
@@ -76,7 +76,7 @@ body::before {
     margin-right: 50px;
 }
 
-/* Wrapper styles */
+/* Wrapper */
 .wrapper {
     width: 400px;
     border-radius: 15px;
@@ -213,7 +213,7 @@ button:hover {
     opacity: 1;
 }
 
-/* Forget section */
+/* Forget */
 .forget {
     display: flex;
     align-items: center;
@@ -235,7 +235,7 @@ button:hover {
     margin-left: 8px;
 }
 
-/* Main content styles */
+/* Main */
 main {
     width: 100%;
     height: 100%;
@@ -243,4 +243,63 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+
+/* Slider */
+
+.container {
+	padding: 2rem;
+}
+
+.slider-wrapper {
+	position: absolute; /* Ensure it stays positioned relative to the page */
+	top: 70px; /* Keep it under the navbar */
+	left: 0; /* Align it to the left of the screen */
+	width: 100%; /* Match the width of the navbar */
+	height: 33vh; /* Occupy 1/3 of the screen vertically */
+	margin: 0;
+	z-index: 1; /* Ensure it stays above other content but below the navbar */
+}
+
+.slider {
+	display: flex;
+	width: 100%; /* Match the width of the wrapper */
+	height: 100%; /* Match the height of the wrapper */
+	overflow-x: auto;
+	scroll-snap-type: x mandatory;
+	scroll-behavior: smooth;
+	box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
+	-ms-overflow-style: none; /* Hide scrollbar IE and Edge */
+	scrollbar-width: none; /* Hide scrollbar Firefox */
+}
+
+.slider img {
+	flex: 1 0 100%;
+	scroll-snap-align: start;
+	object-fit: cover;
+	height: 100%; /* Ensure images fill the slider height */
+}
+
+.slider-nav {
+	display: flex;
+	column-gap: 1rem;
+	position: absolute;
+	bottom: 1.25rem;
+	left: 50%;
+	transform: translateX(-50%);
+	z-index: 1;
+}
+
+.slider-nav a {
+	width: 0.5rem;
+	height: 0.5rem;
+	border-radius: 50%;
+	background-color: #fff;
+	opacity: 0.75;
+	transition: opacity ease 250ms;
+}
+
+.slider-nav a:hover {
+	opacity: 1;
 }
