--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,22 @@
     </nav>
     <div style="height: 70px;"></div>
     <main>
-        <!-- Add your main content here -->
+        
+        <section class="container" style="padding: 0;">
+            <div class="slider-wrapper">
+                <div class="slider">
+                    <img id="slide-1" src="../static/img/anuncio1.jpg" alt="Anuncio 1" />
+                    <img id="slide-2" src="../static/img/anuncio2.jpeg" alt="Anuncio 2" />
+                    <img id="slide-3" src="../static/img/anuncio3.jpeg" alt="Anuncio 3" />
+                </div>
+                <div class="slider-nav">
+                    <a href="#slide-1"></a>
+                    <a href="#slide-2"></a>
+                    <a href="#slide-3"></a>
+                </div>
+            </div>
+        </section>
+
     </main>
 </body>
 </html>
