Página principal finalizada

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,12 +8,20 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="logo">SEGA</div>
+        <div class="logo">
+            <a href="./index.html">
+                <img src="../static/img/logo.png" alt="SEGA Logo" style="height: 50px;">
+            </a>
+        </div>
         <div class="menu">
             <a href="./juegos.html">Juegos</a>
             <a href="./noticias.html">Noticias</a>
         </div>
-        <a href="./login.html" class="login">Login</a>
+        <div class="login-container">
+            <a href="./login.html" class="login">
+                <img src="../static/img/login.png" alt="Login" style="height: 40px; width: auto; position: relative; top: 5px;">
+            </a>
+        </div>
     </nav>
     <div style="height: 70px;"></div>
     <main>
@@ -21,9 +29,9 @@
         <section class="container" style="padding: 0;">
             <div class="slider-wrapper">
                 <div class="slider">
-                    <img id="slide-1" src="../static/img/anuncio1.jpg" alt="Anuncio 1" />
-                    <img id="slide-2" src="../static/img/anuncio2.jpeg" alt="Anuncio 2" />
-                    <img id="slide-3" src="../static/img/anuncio3.jpeg" alt="Anuncio 3" />
+                    <img id="slide-1" src="../static/img/lol.jpg" alt="Anuncio 1" />
+                    <img id="slide-2" src="../static/img/rocket.jpg" alt="Anuncio 2" />
+                    <img id="slide-3" src="../static/img/valorant.jpg" alt="Anuncio 3" />
                 </div>
                 <div class="slider-nav">
                     <a href="#slide-1"></a>
@@ -32,6 +40,27 @@
                 </div>
             </div>
         </section>
+
+        <div class="info">
+            <div class="info-column">
+                <h3>👾 Quiénes somos</h3>
+                <p>
+                    Somos una startup de desarrollo de videojuegos enfocada en crear títulos competitivos, rápidos y con una curva de habilidad desafiante. Nuestro equipo combina experiencia en eSports, diseño de sistemas de juego y desarrollo multiplataforma.
+                </p>
+            </div>
+            <div class="info-column">
+                <h3>🎮 Nuestra misión</h3>
+                <p>
+                    Diseñamos y desarrollamos MOBA, shooters tácticos y juegos arcade de deportes con un enfoque en la jugabilidad estratégica, la competición online y el diseño estilizado. Queremos construir franquicias que crezcan con sus comunidades.
+                </p>
+            </div>
+            <div class="info-column">
+                <h3>🌟 Qué nos hace especiales</h3>
+                <p>
+                    Unimos el diseño competitivo con accesibilidad arcade. Creamos juegos fáciles de jugar, difíciles de dominar, con un alto potencial para eSports y streaming.
+                </p>
+            </div>
+        </div>
 
     </main>
 </body>
