--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -33,13 +33,12 @@ body::before {
     width: 100%;
     height: auto;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     padding: 15px 30px;
     background-color: #353333;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-    z-index: 1000;
+    z-index: 1000; /* Ensure it stays above other elements */
     font-family: Arial, sans-serif;
 }
 
@@ -56,6 +55,10 @@ body::before {
     display: flex;
     gap: 20px;
     align-items: center;
+    position: absolute; /* Revert to absolute positioning */
+    left: 50%; /* Center horizontally */
+    transform: translateX(-50%); /* Ensure proper centering */
+    margin: 0; /* Remove auto margin */
 }
 
 .navbar .menu a {
@@ -253,32 +256,32 @@ main {
 }
 
 .slider-wrapper {
-	position: absolute; /* Ensure it stays positioned relative to the page */
-	top: 70px; /* Keep it under the navbar */
-	left: 0; /* Align it to the left of the screen */
-	width: 100%; /* Match the width of the navbar */
-	height: 33vh; /* Occupy 1/3 of the screen vertically */
+	position: absolute;
+	top: 70px;
+	left: 0;
+	width: 100%;
+	height: 33vh;
 	margin: 0;
-	z-index: 1; /* Ensure it stays above other content but below the navbar */
+	z-index: 1;
 }
 
 .slider {
 	display: flex;
-	width: 100%; /* Match the width of the wrapper */
-	height: 100%; /* Match the height of the wrapper */
+	width: 100%;
+	height: 100%;
 	overflow-x: auto;
 	scroll-snap-type: x mandatory;
 	scroll-behavior: smooth;
 	box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
-	-ms-overflow-style: none; /* Hide scrollbar IE and Edge */
-	scrollbar-width: none; /* Hide scrollbar Firefox */
+	-ms-overflow-style: none;
+	scrollbar-width: none;
 }
 
 .slider img {
 	flex: 1 0 100%;
 	scroll-snap-align: start;
 	object-fit: cover;
-	height: 100%; /* Ensure images fill the slider height */
+	height: 100%;
 }
 
 .slider-nav {
@@ -303,3 +306,32 @@ main {
 .slider-nav a:hover {
 	opacity: 1;
 }
+
+/* Info */
+.info {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 2rem;
+    margin-top: 3rem;
+    color: #ffffff;
+    text-align: center;
+}
+
+.info-column {
+    flex: 1;
+    margin: 0 1rem;
+}
+
+.info-column h3 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+    color: #ffffff;
+}
+
+.info-column p {
+    font-size: 1.2rem;
+    line-height: 1.8;
+    color: #ffffff;
+}
+
