Creadas y enlazadas la página de juegos y la de noticias

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,8 @@
             </a>
         </div>
         <div class="menu">
-            <a href="./juegos.html">Juegos</a>
-            <a href="./noticias.html">Noticias</a>
+            <a href="./games.html">Juegos</a>
+            <a href="./news.html">Noticias</a>
         </div>
         <div class="login-container">
             <a href="./login.html" class="login">
