--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -461,4 +461,127 @@ main {
     color: #353333;
 }
 
-/* */
+/* Profile */
+.profile-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    height: calc(100vh - 70px);
+    gap: 20px;
+}
+
+.profile-card-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.profile-card {
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border-radius: 15px;
+    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.37);
+    padding: 30px;
+    text-align: center;
+    color: #ffffff;
+    width: 350px;
+}
+
+.profile-avatar {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    margin-bottom: 20px;
+    border: 3px solid #ffffff;
+}
+
+.profile-card h2 {
+    font-size: 1.8rem;
+    margin-bottom: 10px;
+}
+
+.profile-card p {
+    font-size: 1rem;
+    margin: 5px 0;
+}
+
+.edit-profile-btn {
+    background-color: #353333;
+    color: #ffffff;
+    font-weight: 600;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 25px;
+    font-size: 16px;
+    border: 2px solid transparent;
+    transition: all 0.3s ease;
+    margin-top: 20px;
+}
+
+.edit-profile-btn:hover {
+    color: #353333;
+    background: rgba(255, 255, 255, 0.2);
+    border-color: #ffffff;
+}
+
+
+.profile-navigation {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.nav-btn {
+    background-color: #353333;
+    color: #ffffff;
+    font-weight: 600;
+    border: none;
+    padding: 10px 15px;
+    cursor: pointer;
+    border-radius: 25px;
+    font-size: 16px;
+    border: 2px solid transparent;
+    transition: all 0.3s ease;
+}
+
+.nav-btn:hover {
+    color: #353333;
+    background: rgba(255, 255, 255, 0.2);
+    border-color: #ffffff;
+}
+
+.prev-btn {
+    margin-right: auto;
+}
+
+.next-btn {
+    margin-left: auto;
+}
+
+/* Add Section */
+
+.add-container {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    margin-top: 20px;
+}
+
+.add-section {
+    padding: 20px;
+    border-radius: 15px;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.37);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.add-section:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 12px 48px rgba(0, 0, 0, 0.5);
+}
