--- a/back/templates/add.html
+++ b/back/templates/add.html
@@ -24,25 +24,39 @@
             </a>
         </div>
     </nav>
+
     <div style="height: 70px;"></div>
+
     <div class="wrapper">
         <h2>Añadir Contenido</h2>
         <div class="add-container">
             <div class="add-section add-games">
                 <h3>Añadir Juego</h3>
-                <form action="#" method="post">
+                <form action="/añadir_juego" method="post">
                     <div class="input-field">
-                        <input type="text" placeholder="Nombre del Juego" required>
+                        <label for="idjuego">ID del Juego:</label><br>
+                        <input type="number" placeholder="ID numérico" name="idjuego" id="idjuego" required>
                     </div>
                     <div class="input-field">
-                        <textarea placeholder="Descripción del Juego" required></textarea>
+                        <label for="nombre">Nombre:</label><br>
+                        <input type="text" placeholder="Nombre del Juego" name="nombre" id="nombre" required>
                     </div>
                     <div class="input-field">
-                        <input type="url" placeholder="URL de la Imagen" required>
+                        <label for="genero">Género:</label><br>
+                        <input type="text" placeholder="Género del Juego" name="genero" id="genero" required>
+                    </div>
+                    <div class="input-field">
+                        <label for="descripcion">Descripción:</label><br>
+                        <textarea placeholder="Descripción del Juego" name="descripcion" id="descripcion" required></textarea>
+                    </div>
+                    <div class="input-field">
+                        <label for="imagen">Imagen:</label><br>
+                        <input type="url" placeholder="URL de la Imagen" name="imagen" id="imagen" required>
                     </div>
                     <button type="submit">Añadir Juego</button>
                 </form>
             </div>
+
             <div class="add-section add-news">
                 <h3>Añadir Noticia</h3>
                 <form action="#" method="post">
