--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10,7 +10,8 @@ body {
     justify-content: center;
     min-height: 100vh;
     width: 100%;
-    padding: 0 10px;
+    /* padding: 0 10px; */
+    padding-top: 70px;
     background: linear-gradient(135deg, rgb(30, 29, 29) 0%, #353333 100%);
 }
 
@@ -79,6 +80,46 @@ body::before {
     margin-right: 50px;
 }
 
+.dropdown {
+    position: relative;
+}
+
+.dropdown .dropbtn {
+    cursor: pointer;
+    color: #ffffff;
+    text-decoration: none;
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    top: 100%; /* debajo del botón */
+    left: 0;
+    background-color: #444;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+    z-index: 1001;
+    border-radius: 4px;
+}
+
+.dropdown-content a {
+    color: white;
+    padding: 12px 16px;
+    display: block;
+    text-decoration: none;
+    transition: background-color 0.2s;
+}
+
+.dropdown-content a:hover {
+    background-color: #555;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
 /* Login / Register */
 .wrapper {
     width: 400px;
@@ -101,8 +142,20 @@ form {
     flex-direction: column;
 }
 
-h2 {
-    font-size: 2.2rem;
+/* h2 {
+    font-size: 20px;
+    margin-bottom: 20px;
+    color: #ffffff;
+    letter-spacing: 1px;
+} */
+h3 {
+    font-size: 20px;
+    margin-bottom: 20px;
+    color: #ffffff;
+    letter-spacing: 1px;
+}
+h4 {
+    font-size: 18px;
     margin-bottom: 20px;
     color: #ffffff;
     letter-spacing: 1px;
@@ -165,7 +218,7 @@ button:hover {
     left: 0;
     transform: translateY(-50%);
     font-size: 16px;
-    color: #000000;
+    color: white;
     pointer-events: none;
     transition: all 0.3s ease;
     padding-bottom: 40px;
@@ -419,6 +472,7 @@ main {
     overflow: hidden;
     text-align: center;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+    cursor: pointer;
 }
 
 .game-item:hover {
