--- a/templates/noticias/noticias.html
+++ b/templates/noticias/noticias.html
@@ -8,42 +8,22 @@
     <link rel="stylesheet" href="../static/css/styles.css">
 </head>
 <body>
-    <nav class="navbar">
-        <div class="logo">
-            <a href="{{ url_for('cargar_index') }}">
-                <img src="../static/img/logo.png" alt="SEGA Logo" style="height: 50px;">
-            </a>
-        </div>
-        <div class="menu">
-            <a href="{{ url_for('BPjuegos.juegos') }}">Juegos</a>
-            <a href="{{ url_for('BPnoticias.noticias') }}">Noticias</a>
-        </div>
-        <div class="login-container">
-            <a href="./login.html" class="login">
-                <img src="../static/img/login.png" alt="Login" style="height: 40px; width: auto; position: relative; top: 5px;">
-            </a>
-        </div>
-    </nav>
-    <div style="height: 70px;"></div>
+    {% if es_admin %}
+        {% include 'navbarAdmin.html' %}
+    {% else %}
+        {% include 'navbar.html' %}
+    {% endif %}
     <main class="news-container">
-        <section class="news-item">
-            <img src="../static/img/steam.png" alt="Noticia 1">
-            <h2>Título de la Noticia 1</h2>
-            <p>Descripción breve de la noticia 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        {% for noticia in noticias %}
+        <section class="news-item" id="{{ noticia.IdNoticia }}" href="{{ url_for('BPnoticias.detalle_noticia', id=noticia.IdNoticia) }}">
+            <img src="{{noticia.Img}}">
+            <h2>{{noticia.Titulo}}</h2>
+            <h3>{{noticia.Subtitulo}}</h3>
+            <h4>{{noticia.Fecha}}</h4>
+            <p>{{noticia.Contenido}}</p>
             <a href="#">Leer más</a>
         </section>
-        <section class="news-item">
-            <img src="../static/img/epic.png" alt="Noticia 2">
-            <h2>Título de la Noticia 2</h2>
-            <p>Descripción breve de la noticia 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a href="#">Leer más</a>
-        </section>
-        <section class="news-item">
-            <img src="../static/img/ubisoft.png" alt="Noticia 3">
-            <h2>Título de la Noticia 3</h2>
-            <p>Descripción breve de la noticia 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a href="#">Leer más</a>
-        </section>
+        {% endfor %}
     </main>
 </body>
 </html>
