--- a/templates/usuarios/signup.html
+++ b/templates/usuarios/signup.html
@@ -10,16 +10,14 @@
 <body>
     <div class="wrapper">
         <form action="{{ url_for('BPusuarios.add_user') }}" method="post">
-            <h2>👻 GAYMERS 👻</h2>
+            <h2>👻 GAMERS 👻</h2>
             <div class="input-field">
                 <input type="text" placeholder="Nombre" name="Nombre" id="Nombre" required>
             </div>
             <div class="input-field">
-                <label for="Apellidos">Apellidos: </label><br>
                 <input type="text" placeholder="Apellidos" name="Apellidos" id="Apellidos" required>
             </div>
             <div class="input-field">
-                <label for="FechaNacimiento">Fecha de nacimiento:</label><br>
                 <input type="date" placeholder="Fecha de nacimiento" name="FechaNacimiento" id="FechaNacimiento" required>
             </div>
             <div class="input-field">
@@ -33,12 +31,14 @@
                 </select>
             </div>
             <div class="input-field">
-                <label for="Email">Email:</label><br>
                 <input type="email" placeholder="Email" name="Email" id="Email" required>
             </div>
             <div class="input-field">
-                <label for="Contraseña">Contraseña:</label><br>
                 <input type="password" placeholder="Contraseña" name="Contraseña" id="Contraseña" required>
+            </div>
+            <div class="input-field">
+                <label for="EsAdmin">Permisos Admin</label><br>
+                <input type="checkbox" placeholder="Usuario Admin" name="EsAdmin" id="EsAdmin">
             </div>
             <button type="submit">Registrarse</button>
         </form>
