Entrega Jose Ramon completa

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/css/styles.css">
-    <link rel="icon" href="../static/img/logo.png" type="image">
+    <link rel="stylesheet" href="../../static/css/styles.css">
+    <link rel="icon" href="../../static/img/logo.png" type="image">
     <title>Gamers | Inicio</title>
 </head>
 <body>
@@ -17,9 +17,9 @@
         <section class="container" style="padding: 0;">
             <div class="slider-wrapper">
                 <div class="slider">
-                    <img id="slide-1" src="../static/img/lol.jpg" alt="Anuncio 1" />
-                    <img id="slide-2" src="../static/img/rocket.jpg" alt="Anuncio 2" />
-                    <img id="slide-3" src="../static/img/valorant.jpg" alt="Anuncio 3" />
+                    <img id="slide-1" src="../../static/img/lol.jpg" alt="Anuncio 1" />
+                    <img id="slide-2" src="../../static/img/rocket.jpg" alt="Anuncio 2" />
+                    <img id="slide-3" src="../../static/img/valorant.jpg" alt="Anuncio 3" />
                 </div>
                 <div class="slider-nav">
                     <a href="#slide-1"></a>
