--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -515,7 +515,20 @@ main {
     background-color: rgba(255, 255, 255, 0.2);
     color: #353333;
 }
-
+.Texto{
+    display: -webkit-box;
+    -webkit-line-clamp: 5;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.Subtitulo{
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 /* Profile */
 .profile-container {
     display: flex;
