--- a/templates/juegos/editar_juegos.html
+++ b/templates/juegos/editar_juegos.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../../static/img/logo.png" type="image">
-    <title>Gamers | Juegos</title>
+    <title>Gamers | Añadir Contenido</title>
     <link rel="stylesheet" href="../../static/css/styles.css">
 </head>
 <body>
@@ -13,7 +13,6 @@
     {% else %}
         {% include 'navbar.html' %}
     {% endif %}
-    <div style="height: 70px;"></div>
     <main class="games-container">
         {% for juego in juegos %}
         <section class="game-item" id="{{ juego.IdJuego }}">
@@ -21,7 +20,7 @@
             <h2>{{juego.Nombre}}</h2>
             <h3>{{juego.Genero}}</h3>
             <p class="Texto">{{juego.Descripcion}}</p>
-            <a href="{{ url_for('BPjuegos.detail_juego', juego_id=juego.IdJuego) }}">Ver más</a>
+            <a href="{{ url_for('BPjuegos.edit_juego', juego_id=juego.IdJuego) }}">Ver más</a>
         </section>
         {% endfor %}
     </main>
