--- a/templates/usuarios/signup.html
+++ b/templates/usuarios/signup.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../static/img/logo.png" type="image">
+    <link rel="icon" href="../../static/img/logo.png" type="image">
     <title>Gamers | Registro</title>
-    <link rel="stylesheet" href="../static/css/styles.css">
+    <link rel="stylesheet" href="../../static/css/styles.css">
 </head>
 <body>
     <div class="wrapper">
